--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,9 @@
               "src/assets"
             ],
             "styles": [
+              "src/theme.scss",
               "src/styles.css"
+              
             ],
             "scripts": []
           },
@@ -79,6 +81,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              "src/theme.scss",
               "src/styles.css"
             ],
             "scripts": [],
